# hanel_warehouse_gateway

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  release-please-config.json
.claude/agents/: adr-reviewer.md  integration-checker.md  soap-tester.md
.claude/commands/: check-adr.md  new-operation.md  run-tests.md  soap-fixture.md
.github/workflows/: ci.yml  commitlint.yml  pr-title-lint.yml  release-please.yml
docs/: index.md  inventory_response.xml  requirements.md  scripts.md
docs/adr/: 001-packaging-structure.md  002-soap-transport.md  003-configuration.md  004-xml-construction-parsing.md  005-error-handling-retry.md  006-logging.md  007-testing-strategy.md  008-input-validation.md  009-claude-instructions.md  010-claude-agents.md  011-claude-commands.md  012-development-workflow.md  013-uv-package-manager.md  014-documentation-toolchain.md  015-lot-management.md  016-lot-tag-names-provisional.md  017-pypi-publishing.md  018-inventory-article-tag-and-h10-special-field.md
docs/api/: config.md  exceptions.md  gateway.md  models.md
docs/contributing/: claude-agents.md  claude-commands.md  development-workflow.md
docs/requirements/: 001-core-specification.md  002_lot_management_hanel_gateway.md  README.md
mock_server/: Dockerfile  README.md  app.py  handlers.py  responses.py  state.py
mock_server/data/: articles.json  inventory.json  jobs.json
scripts/: README.md  hanel_cli.py
scripts/examples/: cancel_order.json  register_article.json  send_movement_order_multi.json  send_movement_order_single.json
src/hanel_warehouse_gateway/: __init__.py  _xml.py  config.py  exceptions.py  gateway.py  models.py  operations.py  transport.py
tests/: test_config.py  test_exceptions.py  test_mock_server.py  test_models.py  test_operations.py  test_transport.py  test_xml.py
tests/fixtures/: read_inventory_response.xml  read_inventory_v04_response.xml  read_jobs_response_mode0.xml  read_jobs_response_mode1.xml  read_jobs_v02_response_mode0.xml  read_jobs_v02_response_mode1.xml  response_delete_job_error.xml  response_delete_job_ok.xml  response_soap_fault.xml  response_soap_fault_with_detail.xml  sendAPDReqV01_error.xml  sendAPDReqV01_success.xml  sendAPDReqV03_error.xml  sendAPDReqV03_success.xml  sendAPDV03_error.xml  sendAPDV03_success.xml  send_movement_order_success.xml  send_movement_order_v02_success.xml  soap_fault.xml
