[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hanel-warehouse-gateway"
version = "0.1.2"
description = "Python gateway for the Hanel automated warehouse SOAP interface"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "mypy>=1.10",
    "ruff>=0.4",
    "types-requests",
    "mkdocs>=1.6",
    "mkdocstrings[python]>=0.27",
    "mkdocs-material>=9.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hanel_warehouse_gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src/hanel_warehouse_gateway"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.mypy]
strict = true
files = ["src/hanel_warehouse_gateway"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
